--- a/cram-ai/cram-ai/src/i18n/locales/zh.json
+++ b/cram-ai/cram-ai/src/i18n/locales/zh.json
@@ -160,6 +160,40 @@
       "button": "开始AI分析"
     }
   },
+  "exam": {
+    "title": "考试界面",
+    "timeRemaining": "剩余时间",
+    "question": "题目",
+    "of": "共",
+    "completed": "已完成",
+    "next": "下一题",
+    "previous": "上一题",
+    "submit": "提交",
+    "review": "复习",
+    "finish": "完成考试",
+    "back": "返回",
+    "settings": "设置",
+    "progress": "进度",
+    "dashboard": {
+      "todayQuestions": "今日刷题",
+      "todayAccuracy": "今日正确率",
+      "averageTime": "刷题平均用时",
+      "totalTime": "今日刷题时间",
+      "questionTypes": "今日题型",
+      "subjectDistribution": "今日模块",
+      "predictedScore": "预测分(参考正确率)",
+      "accuracyIndex": "正确率提分指数",
+      "expandMore": "展开查看更多",
+      "differenceRate": "差异率",
+      "units": {
+        "questions": "道",
+        "percent": "%",
+        "seconds": "秒",
+        "minutes": "分",
+        "points": "分"
+      }
+    }
+  },
   "common": {
     "appName": "佛脚AI",
     "loading": "加载中...",
@@ -179,14 +213,14 @@
     "learnMore": "了解更多"
   },
   "nav": {
-    "home": "Home",
-    "myCourses": "My Courses",
-    "exam": "Exam",
-    "explore": "Explore",
-    "community": "Community",
-    "creators": "Creators",
+    "home": "首页",
+    "myCourses": "我的课程",
+    "exam": "考试",
+    "explore": "探索",
+    "community": "社区",
+    "creators": "创作者",
     "searchPlaceholder": "搜索内容、词条或分析...",
-    "upgradePremium": "Upgrade to Premium",
+    "upgradePremium": "升级高级版",
     "dashboard": "工作台",
     "contentLibrary": "内容库",
     "dataAnalysis": "数据分析",
@@ -287,7 +321,7 @@
     }
   },
   "dashboard": {
-    "welcome": "欢迎回来，阿约",
+    "welcome": "欢迎回来",
     "welcomeMessage": {
       "student": "准备好继续您的学习之旅了吗？让我们分析一些内容，扩展您的知识。",
       "professional": "准备好提升您的专业技能了吗？让我们深入一些有洞察力的内容分析。"
@@ -327,10 +361,23 @@
       "aiAnalysisDesc": "使用AI进行深度内容分析"
     },
     "recentContent": {
-      "title": "最近内容"
+      "title": "最近内容",
+      "insights": "洞察",
+      "confidence": "置信度",
+      "status": {
+        "completed": "已完成",
+        "in-progress": "进行中",
+        "pending": "待处理"
+      }
     },
     "insights": {
       "title": "AI洞察",
+      "viewDetails": "查看详情",
+      "priority": {
+        "high": "高",
+        "medium": "中",
+        "low": "低"
+      },
       "student": {
         "recommendation": "学习建议",
         "recommendationDesc": "本周专注于机器学习基础",
@@ -347,6 +394,15 @@
         "opportunity": "新机会",
         "opportunityDesc": "3个相关职位空缺符合您的档案"
       }
+    },
+    "tabs": {
+      "recentContent": "最近内容",
+      "aiInsights": "AI洞察",
+      "analytics": "分析"
+    },
+    "analytics": {
+      "contentDistribution": "内容分布",
+      "weeklyActivity": "每周活动"
     },
     "progress": {
       "title": "学习进度",
